--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <form>
             <input type="text" name="name" placeholder="Tirupur Taekwondo Academy"  disabled="true">
             <input type="email" name="email" placeholder="9444544495" disabled="true">
-            <textarea name="message" placeholder="Kannagi Nagar , Tirupur" required></textarea>
+            <textarea name="message" placeholder="Kannagi Nagar , Tirupur" disabled="true"></textarea>
         </form>
     </section>
 
