--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header -->
     <header>
         <img src="logo-removebg-preview.png" alt="Logo" class="logo" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
-        <div id="logoname">Tirupur Taekwondo</div>
+        <div id="logoname">Tiruppur Taekwondo</div>
         <button class="hamburger" onclick="toggleMenu()">
             <div></div>
             <div></div>
@@ -39,7 +39,7 @@
         <div class="carousel-item">
             <img src="1.jpg" alt="Taekwondo Image 1">
             <div class="carousel-text">
-                <h1>Welcome to Tirupur Taekwondo Academy</h1>
+                <h1>Welcome to Tiruppur Taekwondo Academy</h1>
                 <p>Master the art of self-defense and discipline</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Us</h2>
-        <p>At Tirupur Taekwondo Academy, we believe in the power of discipline, focus, and strength. Our expert instructors are
+        <p>At Tiruppur Taekwondo Academy, we believe in the power of discipline, focus, and strength. Our expert instructors are
             here to guide you on your journey to mastering Taekwondo.</p>
 
         <div class="team" data-aos="fade-up">
